# kshell

./: CMakeLists.txt  README.md  compile_flags.txt
cmake/: FindReadline.cmake
inc/: functions.h
include/: commands.h  functions.h
src/: commands.c  functions.c  main.c
